<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <com.example.personal_mine.widget.HeadZoomScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_show"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:background="@drawable/dou_yin"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <RelativeLayout
                    android:id="@+id/rl_mine"
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_yuan"
                    app:layout_constraintBottom_toTopOf="@+id/cl_describe"
                    app:layout_constraintStart_toStartOf="parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_mine"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        />


                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_name_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/account_name"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/rl_mine"
                    app:layout_constraintTop_toTopOf="@id/rl_mine" />

                <TextView
                    android:id="@+id/tv_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/dou_yin_account_text"
                    android:textColor="@color/gray_black"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/rl_mine"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_mine" />

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_account_text"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_mine" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_describe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="180dp"
                    android:background="@drawable/shape_oral_little"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">


                    <TextView
                        android:id="@+id/tv_praise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_praise_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="20dp"
                        android:visibility="gone"
                        android:text=""
                        android:textColor="@color/gray_black"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_praise"
                        app:layout_constraintEnd_toStartOf="@+id/tv_care"
                        app:layout_constraintStart_toEndOf="@id/tv_praise"
                        app:layout_constraintTop_toTopOf="@+id/tv_praise" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="43dp" />


                    <TextView
                        android:id="@+id/tv_care"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/show"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/guideline"
                        app:layout_constraintStart_toEndOf="@id/tv_praise_text"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_care_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/care_show"
                        android:textColor="@color/gray_black"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_care"
                        app:layout_constraintStart_toEndOf="@id/tv_care"
                        app:layout_constraintTop_toTopOf="@+id/tv_care" />

                    <TextView
                        android:id="@+id/tv_fans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/guideline"
                        app:layout_constraintStart_toEndOf="@id/tv_care_text"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_fans_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/fans"
                        android:textColor="@color/gray_black"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_fans"
                        app:layout_constraintStart_toEndOf="@id/tv_fans"
                        app:layout_constraintTop_toTopOf="@+id/tv_fans" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/group_fans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:constraint_referenced_ids="tv_fans,tv_fans_text"/>

                    <TextView
                        android:id="@+id/tv_describe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/describe"
                        android:textColor="@color/gray_black"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/guideline" />


                    <LinearLayout
                        android:id="@+id/ll_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/shape_oral_decribe"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_describe">

                        <TextView
                            android:id="@+id/tv_gender_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginVertical="2dp"
                            android:layout_marginStart="5dp"
                            android:text="♂"
                            android:textColor="@color/blue"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_old"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="5dp"
                            android:text="@string/earth"
                            android:textColor="@color/gray_black"
                            android:textSize="11sp" />


                    </LinearLayout>


                    <FrameLayout
                        android:id="@+id/fl_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/shape_oral_decribe"
                        app:layout_constraintStart_toEndOf="@+id/ll_gender"
                        app:layout_constraintTop_toBottomOf="@+id/tv_describe">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_marginVertical="2dp"
                            android:text="@string/path"
                            android:textColor="@color/gray_black"
                            android:textSize="11sp" />
                    </FrameLayout>


                    <LinearLayout
                        android:id="@+id/ll_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"

                        android:layout_marginTop="5dp"
                        android:background="@drawable/shape_oral_decribe"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toEndOf="@+id/fl_area"
                        app:layout_constraintTop_toBottomOf="@+id/tv_describe">

                        <TextView
                            android:id="@+id/tv_school_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="2dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="2dp"
                            android:text="⌂"
                            android:textColor="@color/blue"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/tv_school_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="2dp"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/home_path"
                            android:textColor="@color/gray_black"
                            android:textSize="11sp" />


                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_vp_mine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/cl_describe">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_mine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_mine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.example.personal_mine.widget.HeadZoomScrollView>
</layout>


